--- a/Model2_Transformer/requirements.txt
+++ b/Model2_Transformer/requirements.txt
@@ -1,5 +1,31 @@
-torch
-torchvision
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+filelock==3.13.1
+fsspec==2023.10.0
+huggingface-hub==0.19.4
+idna==3.6
+Jinja2==3.1.2
+joblib==1.3.2
+MarkupSafe==2.1.3
+mpmath==1.3.0
+networkx==3.2.1
+nltk==3.8.1
 numpy==1.23.5
-transformers
-tqdm
+packaging==23.2
+Pillow==10.1.0
+PyYAML==6.0.1
+regex==2023.10.3
+requests==2.31.0
+rouge==1.0.1
+safetensors==0.4.0
+six==1.16.0
+sympy==1.12
+tokenizers==0.15.0
+torch==2.1.1
+torchvision==0.16.1
+tqdm==4.66.1
+transformers==4.35.2
+typing_extensions==4.8.0
+urllib3==2.1.0
