--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ data/train_images/
 Ex_data/train_images/
 Ex_data/test_images/
 Ex1_BLIP/Salesforce/blip-image-captioning-base/pytorch_model.bin
+Model2_Transformer/image_caption_model.pth
